fixed encryption issues

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
-    "Lua.diagnostics.globals": [
-        "xorEncrypt"
-    ]
+  "Lua.workspace.library": [
+    "${workspaceFolder}/shared"
+  ],
+  "Lua.runtime.path": [
+    "?.lua",
+    "shared/?.lua"
+  ]
 }
